--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/* Estilos jhoan */
 .cards-team{
     width: 300px;
     height: 300px;
@@ -25,3 +26,5 @@
     width: 90%;
     height: 10%;
 }
+
+/* Fin estilos jhoan */
