--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,20 @@ body {
 
 }
 
+
+.card-gio {
+  width: var(--card-width);
+  height: var(--card-height);
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  padding: 0 36px;
+  perspective: 2500px;
+  margin: 0 50px;
+}
+
+
 .cover-image {
   width: 100%;
   height: 100%;
