--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-
 :root {
   --card-height: 300px;
   --card-width: calc(var(--card-height) / 1.5);
@@ -6,24 +5,32 @@
 
 * {
   box-sizing: border-box;
-  color: whitesmoke
+  color: whitesmoke;
 }
 
 body {
-  width: 100vw;
-  height: 100vh;
   margin: 0;
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
-  flex-direction: column;
   align-items: center;
-  background: #191c29;
-  gap: 2rem;
+  background-image: url(ratica.jpg);
+  background-size: cover;
+  gap: 1rem;
+}
+
+.title {
+  color: #3c3f4e;
+  background-color: black;
+  font-size: 2em;
+  margin: 0;
+  text-align: center;
+  align-items: center;
 }
 
 .card-movie {
   background-color: #62347b;
-  width: calc(50vh /1.5);
+  width: calc(50vh / 1.5);
   height: 50vh;
   padding: 10pxx;
   position: relative;
@@ -34,9 +41,7 @@ body {
   text-align: center;
   font-size: 1.5em;
   color: #d9c9db;
-
 }
-
 
 .card-gio {
   width: var(--card-width);
@@ -49,7 +54,6 @@ body {
   perspective: 2500px;
   margin: 0 50px;
 }
-
 
 .cover-image {
   width: 100%;
@@ -132,32 +136,32 @@ body {
 }
 
 /* Estilos jhoan */
-.cards-team{
-    width: 300px;
-    height: 300px;
-    border-radius: 20px;
-    background-color: aqua;
+.cards-team {
+  width: 300px;
+  height: 300px;
+  border-radius: 20px;
+  background-color: aqua;
 }
 
-.card-jhoan{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    text-align: center;
+.card-jhoan {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  text-align: center;
 }
 
-.imagen-raccoon{
-    width: 60%;
-    aspect-ratio: 1 / 1;
-    object-fit: fill;
+.imagen-raccoon {
+  width: 60%;
+  aspect-ratio: 1 / 1;
+  object-fit: fill;
 }
 
-.parrafo{
-    width: 90%;
-    height: 10%;
+.parrafo {
+  width: 90%;
+  height: 10%;
 }
 
 /* Fin estilos jhoan */
@@ -189,7 +193,8 @@ body {
   border-radius: 0 0 10px 10px;
 }
 
-.info-card-ana h3, .info-card-ana h4 {
+.info-card-ana h3,
+.info-card-ana h4 {
   margin: 5px 0;
   color: rgb(245, 245, 245);
 }
@@ -198,13 +203,13 @@ body {
 /* 
 estilos mateo */
 
-.card-mateo{
+.card-mateo {
   display: flex;
   flex-direction: column;
   width: 50%;
   padding: 10px;
   text-align: center;
 }
-.card-mateo img{
+.card-mateo img {
   width: 100%;
 }
